fix wrapping on research page for mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -242,7 +242,7 @@ body, html {
     }
 
     @include media-query($research-break) {
-        width: 400px;
+        width: 100%;
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -261,6 +261,7 @@ body, html {
             float: left;
             clear: both;
             max-width: 300px;
+            width: 100%;
             clear: both;
             padding-left: 0px;
 
